bdr.BDR.scala.error
Erreur de compilation :
BDR:15: error: ';' expected but 'else' found.
      else if (lettre='A')
      ^BDR:17: error: ';' expected but 'else' found.
      else if (lettre='B')
      ^BDR:19: error: ';' expected but 'else' found.
      else if (lettre='C')
      ^BDR:21: error: ';' expected but 'else' found.
      else if (lettre='Z')
      ^BDR:23: error: ';' expected but 'else' found.
      else if (lettre='Y')
      ^BDR:25: error: ';' expected but 'else' found.
      else if (lettre='X')
      ^